# geoworld

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  MVP_UI_Requirements.md  Makefile  README.md  conanfile.py  flake.nix  result
cmake/: clang_format.cmake  clang_tidy.cmake  cppcheck.cmake  cpplint.cmake
docs/: api-reference.md  architecture-overview.md  data-provider-system.md  examples-and-tutorials.md  plugin-development-guide.md
nix/: qt-adv-dock.nix
plugins/: CMakeLists.txt
plugins/fileprovider/: CMakeLists.txt  FileDataLayer.cpp  FileDataLayer.h  FileDataProvider.cpp  FileDataProvider.h  FileProviderPlugin.cpp  FileProviderPlugin.h  fileprovider.json
plugins/layermanager/: CMakeLists.txt  LayerManagerPlugin.cpp  LayerManagerPlugin.h  LayerManagerWidget.cpp  LayerManagerWidget.h  layermanager.json
plugins/mapview/: CMakeLists.txt  MapViewPlugin.cpp  MapViewPlugin.h  QtLocationMapWidget.cpp  QtLocationMapWidget.h  mapview.json
qml/: MapView.qml
src/: CMakeLists.txt  DataProviderManager.cpp  DataProviderManager.h  IDataProvider.h  IPlugin.h  MainWindow.cpp  MainWindow.cxx  MainWindow.h  MapWidget.cpp  MapWidget.h  PluginManager.cpp  PluginManager.h  main.cpp  main.cxx
